--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "uxmansarwar/admin-panel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": ["php Developer", "laravel developer", "laravel", "framework"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
